第一个测试版本

--- a/conf/aria2.conf
+++ b/conf/aria2.conf
@@ -84,11 +84,11 @@ listen-port=51413
 # 打开DHT功能, PT需要禁用, 默认:true
 enable-dht=true
 # 打开IPv6 DHT功能, PT需要禁用
-#enable-dht6=false
+enable-dht6=true
 # DHT网络监听端口, 默认:6881-6999
 #dht-listen-port=6881-6999
 # 本地节点查找, PT需要禁用, 默认:false
-#bt-enable-lpd=true
+bt-enable-lpd=true
 # 种子交换, PT需要禁用, 默认:true
 enable-peer-exchange=true
 # 每个种子限速, 对少种的PT很有用, 默认:50K
