--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -32,7 +32,7 @@ http {
         server_name 127.0.0.1;    #主机ip
         
         location / {
-            root /root/AriaNg; #站点目录
+            root /root/ariang; #站点目录
             }
         }
  
