--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,4 +1,4 @@
-user www-data;
+user root;
 worker_processes auto;
 pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
@@ -32,7 +32,7 @@ http {
         server_name 127.0.0.1;    #主机ip
         
         location / {
-            root /root/ariang; #站点目录
+            root /root/dl/ariang; #站点目录
             }
         }
  
